Fix intro animation clipping after reveal
Fixes #456

--- a/src/scss/components/_intro-animations.scss
+++ b/src/scss/components/_intro-animations.scss
@@ -136,7 +136,7 @@ body.has-intro-animations--flex.has-intro-animations--fast {
     opacity: 1;
     visibility: visible;
     transform: none;
-    clip-path: inset(0 0 0 0 round var(--anima-intro-clip-radius));
+    clip-path: none;
   }
 
   body.has-intro-animations--fade {
